@@ -4,21 +4,16 @@ import it.polimi.ingsw.is25am33.model.CargoCube;
 import it.polimi.ingsw.is25am33.model.GameState;
 import it.polimi.ingsw.is25am33.model.IllegalDecisionException;
 import it.polimi.ingsw.is25am33.model.component.Storage;
-import it.polimi.ingsw.is25am33.model.game.Game;
 
-import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
-import java.util.ListIterator;
 
-public class AbandonedStation extends AdventureCard implements cargoCubesHandler, playerMover {
+public class AbandonedStation extends AdventureCard implements PlayerMover {
 
     private int stepsBack;
     private int requiredCrewMembers;
     private List<CargoCube> reward;
-
-    private final Iterator<CargoCube> rewardIterator = reward.iterator();
-
+    private final Iterator<CargoCube> rewardIterator;
     private static final List<GameState> cardStates = List.of(GameState.VISIT_LOCATION, GameState.HANDLE_CUBES_REWARD);
 
     public void setRequiredCrewMembers(int requiredCrewMembers) {
@@ -36,6 +31,7 @@ public class AbandonedStation extends AdventureCard implements cargoCubesHandler
     public AbandonedStation(int stepsBack, int requiredCrewMembers, List<CargoCube> reward) {
         this.stepsBack = stepsBack;
         this.requiredCrewMembers = requiredCrewMembers;
+        this.rewardIterator = reward.iterator();
         this.reward = reward;
     }
 
@@ -63,7 +59,9 @@ public class AbandonedStation extends AdventureCard implements cargoCubesHandler
             throw new IllegalStateException("Not the right state");
 
         if(chosenStorage.isFull()) {
-            CargoCube lessValuableCargoCube = chosenStorage.getStockedCubes().sort(CargoCube.byValue).get(0);
+            List<CargoCube> sortedStorage = chosenStorage.getStockedCubes();
+            sortedStorage.sort(CargoCube.byValue);
+            CargoCube lessValuableCargoCube = sortedStorage.getFirst();
             chosenStorage.removeCube(lessValuableCargoCube);
         }
 
