@@ -2,14 +2,12 @@ package it.polimi.ingsw.is25am33.model.card;
 
 import it.polimi.ingsw.is25am33.model.CargoCube;
 import it.polimi.ingsw.is25am33.model.GameState;
+import it.polimi.ingsw.is25am33.model.IllegalIndexException;
 import it.polimi.ingsw.is25am33.model.component.Storage;
-import it.polimi.ingsw.is25am33.model.game.Game;
-import java.util.ArrayList;
-import java.util.Iterator;
-import java.util.List;
-import java.util.ListResourceBundle;
 
-public class Planets extends AdventureCard implements cargoCubesHandler, playerMover {
+import java.util.List;
+
+public class Planets extends AdventureCard implements PlayerMover {
 
     private List<Planet> availablePlanets;
     private int stepsBack;
@@ -59,7 +57,9 @@ public class Planets extends AdventureCard implements cargoCubesHandler, playerM
         if (currState != GameState.HANDLE_CUBES_REWARD) throw new IllegalStateException("Not the right state");
 
         if(chosenStorage.isFull()) {
-            CargoCube lessValuableCargoCube = chosenStorage.getStockedCubes().sort(CargoCube.byValue).get(0);
+            List<CargoCube> sortedStorage = chosenStorage.getStockedCubes();
+            sortedStorage.sort(CargoCube.byValue);
+            CargoCube lessValuableCargoCube = sortedStorage.getFirst();
             chosenStorage.removeCube(lessValuableCargoCube);
         }
 
